CryptoScript/Antlr/CryptoScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from CryptoScript.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class CryptoScriptParser : Parser
{
    protected static DFA[] decisionToDFA;
    protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
    public const int
        T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, INT = 9,
        T_KEY = 10, T_VAR = 11, T_PARAMETER = 12, T_PATH = 13, T_TR31H = 14, PATH_VALUE = 15,
        FN = 16, INFO = 17, ID = 18, VARIANT_VALUE = 19, HEX_STRING = 20, BASE64_STRING = 21,
        NORMAL_STRING = 22, TR31_STRING = 23, MECHANISM = 24, M_AES_ECB = 25, M_AES_CBC = 26,
        M_AES_CBC_MAC = 27, M_AES_CTR = 28, M_AES_CMAC = 29, M_AES_GCM = 30, M_AES_CCM = 31,
        M_AES_GMAC = 32, M_HMAC_SHA1 = 33, M_HMAC_SHA224 = 34, M_HMAC_SHA256 = 35, M_HMAC_SHA384 = 36,
        M_HMAC_SHA512 = 37, M_HMAC_SHA512_224 = 38, M_HMAC_SHA512_256 = 39, M_HMAC_SHA3_224 = 40,
        M_HMAC_SHA3_256 = 41, M_HMAC_SHA3_384 = 42, M_HMAC_SHA3_512 = 43, M_HASH_SHA1 = 44,
        M_HASH_SHA224 = 45, M_HASH_SHA256 = 46, M_HASH_SHA384 = 47, M_HASH_SHA512 = 48,
        M_HASH_SHA512_224 = 49, M_HASH_SHA512_256 = 50, M_HASH_SHA3_224 = 51, M_HASH_SHA3_256 = 52,
        M_HASH_SHA3_384 = 53, M_HASH_SHA3_512 = 54, M_DES3_ECB = 55, M_DES3_CBC = 56,
        M_DES3_RETAIL = 57, M_DES3_CMAC = 58, M_WRAP_AES_PINBLOCK_4 = 59, M_WRAP_DES3_PINBLOCK_0 = 60,
        M_WRAP_DES3_PINBLOCK_1 = 61, M_WRAP_DES3_PINBLOCK_2 = 62, M_WRAP_DES3_PINBLOCK_3 = 63,
        M_WRAP_AES_TR31 = 64, M_WRAP_DES3_TR31 = 65, M_KDF_HKDF = 66, M_HKDF_EXTRACT = 67,
        M_HKDF_EXPAND = 68, M_KDF_SP800_108_COUNTER = 69, M_DUKPT_AES_INITIAL_KEY = 70,
        M_DUKPT_AES_WORKING_KEY = 71, M_DUKPT_TDEA_INITIAL_KEY = 72, M_DUKPT_TDEA_WORKING_KEY = 73,
        M_KDF_EMV_AC_SESSION = 74, M_KDF_EMV_MASTER_A = 75, M_KDF_EP2_SESSION = 76,
        M_KDF_EP2_PAN_SURROGATE_TRX = 77, M_KDF_EP2_PAN_RECEIPT_TRX = 78, M_KDF_EP2_PAN_RECEIPT_TRM = 79,
        PADDING = 80, PAD_ISO7816 = 81, PAD_ISO10126 = 82, PAD_PKCS7 = 83, PAD_ISO9797M1 = 84,
        PAD_ISO9797M2 = 85, PAD_ISO9797M3 = 86, PAD_ANSI_X923 = 87, PAD_TLS_CBC = 88,
        PAD_NONE = 89, PARAM_TYPE = 90, P_MECHANISM = 91, P_IV = 92, P_PADDING = 93, P_MAC_LENGTH = 94,
        P_NONCE = 95, P_COUNTER = 96, P_ADATA = 97, P_BLKHDR = 98, P_RND = 99, P_HASH = 100,
        P_SALT = 101, P_OUT_LENGTH = 102, P_VARIANT = 103, P_PRF = 104, P_LABEL = 105, P_USAGE = 106,
        P_KEY_TYPE = 107, P_PAN = 108, P_PSN = 109, P_TRANSACTION = 110, P_FILL = 111, P_RANDOM = 112,
        WS = 113, TR31_FIELD_NAME = 114, TR31_FIELD_VALUE = 115, TR31_KB_VERSION_ID = 116,
        TR31_KB_LENGTH = 117, TR31_WRAPPED_KEYLEN = 118, TR31_KU = 119, TR31_ALGO = 120,
        TR31_MODEU = 121, TR31_KEY_VERSION_NUM = 122, TR31_EXPORTABILITY = 123, TR31_NUM_OPT_BLOCKS = 124,
        TR31_KEY_CONTEXT = 125, TR31_RESERVED_FIELD = 126, TR31_OPT_BLOCK_ID = 127,
        TR31_OPT_BLOCK_DATA = 128, NUM = 129, KU_B0 = 130, KU_B1 = 131, KU_B2 = 132, KU_B3 = 133,
        KU_C0 = 134, KU_D0 = 135, KU_D1 = 136, KU_D2 = 137, KU_D3 = 138, KU_E0 = 139, KU_E1 = 140,
        KU_E2 = 141, KU_E3 = 142, KU_F3 = 143, KU_F4 = 144, KU_F5 = 145, KU_F6 = 146, KU_I0 = 147,
        KU_K0 = 148, KU_K1 = 149, KU_K2 = 150, KU_K3 = 151, KU_K4 = 152, KU_M0 = 153, KU_M1 = 154,
        KU_P2 = 155, KU_V0 = 156, KU_V1 = 157, KU_V2 = 158, KU_V3 = 159, KU_V4 = 160, KU_V5 = 161,
        KV_00 = 162, OPT_AL = 163, OPT_BI = 164, OPT_CT = 165, OPT_DA = 166, OPT_HM = 167,
        OPT_IK = 168, OPT_KC = 169, OPT_KP = 170, OPT_KS = 171, OPT_KV = 172, OPT_LB = 173,
        OPT_PA = 174, OPT_PB = 175, OPT_PK = 176, OPT_TC = 177, OPT_TS = 178, OPT_WP = 179,
        H = 180, R = 181, S = 182, T = 183, D = 184, E = 185, A = 186, B = 187, C = 188, G = 189,
        N = 190, V = 191, X = 192, Y = 193;
    public const int
        RULE_program = 0, RULE_statement = 1, RULE_declaration = 2, RULE_declareparam = 3,
        RULE_type = 4, RULE_tr31Header = 5, RULE_tr31Field = 6, RULE_expression = 7,
        RULE_functionCall = 8, RULE_arguments = 9, RULE_argument = 10;
    public static readonly string[] ruleNames = {
        "program", "statement", "declaration", "declareparam", "type", "tr31Header",
        "tr31Field", "expression", "functionCall", "arguments", "argument"
    };

    private static readonly string[] _LiteralNames = {
        null, "'='", "':'", "'{'", "'}'", "';'", "'('", "')'", "','", null, "'KEY'",
        "'VAR'", "'PARAM'", "'PATH'", "'TR31H'", null, null, null, null, null,
        null, null, null, null, null, "'AES-ECB'", "'AES-CBC'", "'AES-CBC-MAC'",
        "'AES-CTR'", "'AES-CMAC'", "'AES-GCM'", "'AES-CCM'", "'AES-GMAC'", "'HMAC-SHA1'",
        "'HMAC-SHA224'", "'HMAC-SHA256'", "'HMAC-SHA384'", "'HMAC-SHA512'", "'HMAC-SHA512-224'",
        "'HMAC-SHA512-256'", "'HMAC-SHA3-224'", "'HMAC-SHA3-256'", "'HMAC-SHA3-384'",
        "'HMAC-SHA3-512'", "'HASH-SHA1'", "'HASH-SHA224'", "'HASH-SHA256'", "'HASH-SHA384'",
        "'HASH-SHA512'", "'HASH-SHA512-224'", "'HASH-SHA512-256'", "'HASH-SHA3-224'",
        "'HASH-SHA3-256'", "'HASH-SHA3-384'", "'HASH-SHA3-512'", "'DES3-ECB'",
        "'DES3-CBC'", "'DES3-RETAIL'", "'DES3-CMAC'", "'WRAP-AES-PINBLOCK-4'",
        "'WRAP-DES3-PINBLOCK-0'", "'WRAP-DES3-PINBLOCK-1'", "'WRAP-DES3-PINBLOCK-2'",
        "'WRAP-DES3-PINBLOCK-3'", "'WRAP-AES-TR31'", "'WRAP-DES3-TR31'", "'KDF-HKDF'",
        "'HKDF-EXTRACT'", "'HKDF-EXPAND'", "'KDF-SP800-108-COUNTER'", "'DUKPT-AES-INITIAL-KEY'",
        "'DUKPT-AES-WORKING-KEY'", "'DUKPT-TDEA-INITIAL-KEY'", "'DUKPT-TDEA-WORKING-KEY'",
        "'KDF-EMV-AC-SESSION'", "'KDF-EMV-MASTER-A'", "'KDF-EP2-SESSION'", "'KDF-EP2-PAN-SURROGATE-TRX'",
        "'KDF-EP2-PAN-RECEIPT-TRX'", "'KDF-EP2-PAN-RECEIPT-TRM'", null, "'ISO-7816'",
        "'ISO-10126'", "'PKCS-7'", "'ISO-9797-M1'", "'ISO-9797-M2'", "'ISO-9797-M3'",
        "'ANSI-X923'", "'TLS-CBC'", "'NONE'", null, "'#MECH'", "'#IV'", "'#PAD'",
        "'#MACLEN'", "'#NONCE'", "'#COUNTER'", "'#ADATA'", "'#BLKH'", "'#RND'",
        "'#HASH'", "'#SALT'", "'#OUTLEN'", "'#VARIANT'", "'#PRF'", "'#LABEL'",
        "'#USAGE'", "'#KEYTYPE'", "'#PAN'", "'#PSN'", "'#TRANSACTION'", "'#FILL'",
        "'#RANDOM'", null, null, null, "'KBVID'", "'KBLEN'", "'WKL'", "'KEYU'",
        "'ALGO'", "'MODEU'", "'KEYVN'", "'EXP'", "'NUMOPTB'", "'KEYCTX'", "'RSV'",
        "'OPTID'", "'OPTBD'", null, "'B0'", "'B1'", "'B2'", "'B3'", "'C0'", "'D0'",
        "'D1'", "'D2'", "'D3'", "'E0'", "'E1'", "'E2'", "'E3'", "'F3'", "'F4'",
        "'F5'", "'F6'", "'I0'", "'K0'", "'K1'", "'K2'", "'K3'", "'K4'", "'M0'",
        "'M1'", "'P2'", "'V0'", "'V1'", "'V2'", "'V3'", "'V4'", "'V5'", "'00'",
        "'AL'", "'BI'", "'CT'", "'DA'", "'HM'", "'IK'", "'KC'", "'KP'", "'KS'",
        "'KV'", "'LB'", "'PA'", "'PB'", "'PK'", "'TC'", "'TS'", "'WP'", "'H'",
        "'R'", "'S'", "'T'", "'D'", "'E'", "'A'", "'B'", "'C'", "'G'", "'N'",
        "'V'", "'X'", "'Y'"
    };
    private static readonly string[] _SymbolicNames = {
        null, null, null, null, null, null, null, null, null, "INT", "T_KEY",
        "T_VAR", "T_PARAMETER", "T_PATH", "T_TR31H", "PATH_VALUE", "FN", "INFO",
        "ID", "VARIANT_VALUE", "HEX_STRING", "BASE64_STRING", "NORMAL_STRING",
        "TR31_STRING", "MECHANISM", "M_AES_ECB", "M_AES_CBC", "M_AES_CBC_MAC",
        "M_AES_CTR", "M_AES_CMAC", "M_AES_GCM", "M_AES_CCM", "M_AES_GMAC", "M_HMAC_SHA1",
        "M_HMAC_SHA224", "M_HMAC_SHA256", "M_HMAC_SHA384", "M_HMAC_SHA512", "M_HMAC_SHA512_224",
        "M_HMAC_SHA512_256", "M_HMAC_SHA3_224", "M_HMAC_SHA3_256", "M_HMAC_SHA3_384",
        "M_HMAC_SHA3_512", "M_HASH_SHA1", "M_HASH_SHA224", "M_HASH_SHA256", "M_HASH_SHA384",
        "M_HASH_SHA512", "M_HASH_SHA512_224", "M_HASH_SHA512_256", "M_HASH_SHA3_224",
        "M_HASH_SHA3_256", "M_HASH_SHA3_384", "M_HASH_SHA3_512", "M_DES3_ECB",
        "M_DES3_CBC", "M_DES3_RETAIL", "M_DES3_CMAC", "M_WRAP_AES_PINBLOCK_4",
        "M_WRAP_DES3_PINBLOCK_0", "M_WRAP_DES3_PINBLOCK_1", "M_WRAP_DES3_PINBLOCK_2",
        "M_WRAP_DES3_PINBLOCK_3", "M_WRAP_AES_TR31", "M_WRAP_DES3_TR31", "M_KDF_HKDF",
        "M_HKDF_EXTRACT", "M_HKDF_EXPAND", "M_KDF_SP800_108_COUNTER", "M_DUKPT_AES_INITIAL_KEY",
        "M_DUKPT_AES_WORKING_KEY", "M_DUKPT_TDEA_INITIAL_KEY", "M_DUKPT_TDEA_WORKING_KEY",
        "M_KDF_EMV_AC_SESSION", "M_KDF_EMV_MASTER_A", "M_KDF_EP2_SESSION", "M_KDF_EP2_PAN_SURROGATE_TRX",
        "M_KDF_EP2_PAN_RECEIPT_TRX", "M_KDF_EP2_PAN_RECEIPT_TRM", "PADDING", "PAD_ISO7816",
        "PAD_ISO10126", "PAD_PKCS7", "PAD_ISO9797M1", "PAD_ISO9797M2", "PAD_ISO9797M3",
        "PAD_ANSI_X923", "PAD_TLS_CBC", "PAD_NONE", "PARAM_TYPE", "P_MECHANISM",
        "P_IV", "P_PADDING", "P_MAC_LENGTH", "P_NONCE", "P_COUNTER", "P_ADATA",
        "P_BLKHDR", "P_RND", "P_HASH", "P_SALT", "P_OUT_LENGTH", "P_VARIANT",
        "P_PRF", "P_LABEL", "P_USAGE", "P_KEY_TYPE", "P_PAN", "P_PSN", "P_TRANSACTION",
        "P_FILL", "P_RANDOM", "WS", "TR31_FIELD_NAME", "TR31_FIELD_VALUE", "TR31_KB_VERSION_ID",
        "TR31_KB_LENGTH", "TR31_WRAPPED_KEYLEN", "TR31_KU", "TR31_ALGO", "TR31_MODEU",
        "TR31_KEY_VERSION_NUM", "TR31_EXPORTABILITY", "TR31_NUM_OPT_BLOCKS", "TR31_KEY_CONTEXT",
        "TR31_RESERVED_FIELD", "TR31_OPT_BLOCK_ID", "TR31_OPT_BLOCK_DATA", "NUM",
        "KU_B0", "KU_B1", "KU_B2", "KU_B3", "KU_C0", "KU_D0", "KU_D1", "KU_D2",
        "KU_D3", "KU_E0", "KU_E1", "KU_E2", "KU_E3", "KU_F3", "KU_F4", "KU_F5",
        "KU_F6", "KU_I0", "KU_K0", "KU_K1", "KU_K2", "KU_K3", "KU_K4", "KU_M0",
        "KU_M1", "KU_P2", "KU_V0", "KU_V1", "KU_V2", "KU_V3", "KU_V4", "KU_V5",
        "KV_00", "OPT_AL", "OPT_BI", "OPT_CT", "OPT_DA", "OPT_HM", "OPT_IK", "OPT_KC",
        "OPT_KP", "OPT_KS", "OPT_KV", "OPT_LB", "OPT_PA", "OPT_PB", "OPT_PK",
        "OPT_TC", "OPT_TS", "OPT_WP", "H", "R", "S", "T", "D", "E", "A", "B",
        "C", "G", "N", "V", "X", "Y"
    };
    public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

    [NotNull]
    public override IVocabulary Vocabulary
    {
        get
        {
            return DefaultVocabulary;
        }
    }

    public override string GrammarFileName { get { return "CryptoScript.g4"; } }

    public override string[] RuleNames { get { return ruleNames; } }

    public override int[] SerializedAtn { get { return _serializedATN; } }

    static CryptoScriptParser()
    {
        decisionToDFA = new DFA[_ATN.NumberOfDecisions];
        for (int i = 0; i < _ATN.NumberOfDecisions; i++)
        {
            decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
        }
    }

    public CryptoScriptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

    public CryptoScriptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
    : base(input, output, errorOutput)
    {
        Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
    }

    public partial class ProgramContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(CryptoScriptParser.Eof, 0); }
        [System.Diagnostics.DebuggerNonUserCode]
        public StatementContext[] statement()
        {
            return GetRuleContexts<StatementContext>();
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public StatementContext statement(int i)
        {
            return GetRuleContext<StatementContext>(i);
        }
        public ProgramContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_program; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ICryptoScriptListener typedListener = listener as ICryptoScriptListener;
            if (typedListener != null) typedListener.EnterProgram(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ICryptoScriptListener typedListener = listener as ICryptoScriptListener;
            if (typedListener != null) typedListener.ExitProgram(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ICryptoScriptVisitor<TResult> typedVisitor = visitor as ICryptoScriptVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitProgram(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public ProgramContext program()
    {
        ProgramContext _localctx = new ProgramContext(Context, State);
        EnterRule(_localctx, 0, RULE_program);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 25;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 97280L) != 0))
                {
                    {
                        {
                            State = 22;
                            statement();
                        }
                    }
                    State = 27;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                }
                State = 28;
                Match(Eof);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class StatementContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode]
        public DeclarationContext declaration()
        {
            return GetRuleContext<DeclarationContext>(0);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public FunctionCallContext functionCall()
        {
            return GetRuleContext<FunctionCallContext>(0);
        }
        public StatementContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_statement; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ICryptoScriptListener typedListener = listener as ICryptoScriptListener;
            if (typedListener != null) typedListener.EnterStatement(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ICryptoScriptListener typedListener = listener as ICryptoScriptListener;
            if (typedListener != null) typedListener.ExitStatement(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ICryptoScriptVisitor<TResult> typedVisitor = visitor as ICryptoScriptVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitStatement(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public StatementContext statement()
    {
        StatementContext _localctx = new StatementContext(Context, State);
        EnterRule(_localctx, 2, RULE_statement);
        try
        {
            State = 32;
            ErrorHandler.Sync(this);
            switch (TokenStream.LA(1))
            {
                case T_KEY:
                case T_VAR:
                case T_PARAMETER:
                case T_PATH:
                case T_TR31H:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 30;
                        declaration();
                    }
                    break;
                case FN:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 31;
                        functionCall();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class DeclarationContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode]
        public TypeContext type()
        {
            return GetRuleContext<TypeContext>(0);
        }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(CryptoScriptParser.ID, 0); }
        [System.Diagnostics.DebuggerNonUserCode]
        public ExpressionContext expression()
        {
            return GetRuleContext<ExpressionContext>(0);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public FunctionCallContext functionCall()
        {
            return GetRuleContext<FunctionCallContext>(0);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public DeclareparamContext[] declareparam()
        {
            return GetRuleContexts<DeclareparamContext>();
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public DeclareparamContext declareparam(int i)
        {
            return GetRuleContext<DeclareparamContext>(i);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public Tr31HeaderContext tr31Header()
        {
            return GetRuleContext<Tr31HeaderContext>(0);
        }
        public DeclarationContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_declaration; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ICryptoScriptListener typedListener = listener as ICryptoScriptListener;
            if (typedListener != null) typedListener.EnterDeclaration(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ICryptoScriptListener typedListener = listener as ICryptoScriptListener;
            if (typedListener != null) typedListener.ExitDeclaration(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ICryptoScriptVisitor<TResult> typedVisitor = visitor as ICryptoScriptVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public DeclarationContext declaration()
    {
        DeclarationContext _localctx = new DeclarationContext(Context, State);
        EnterRule(_localctx, 4, RULE_declaration);
        int _la;
        try
        {
            State = 58;
            ErrorHandler.Sync(this);
            switch (Interpreter.AdaptivePredict(TokenStream, 3, Context))
            {
                case 1:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 34;
                        type();
                        State = 35;
                        Match(ID);
                        State = 36;
                        Match(T__0);
                        State = 37;
                        expression();
                    }
                    break;
                case 2:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 39;
                        type();
                        State = 40;
                        Match(ID);
                        State = 41;
                        Match(T__0);
                        State = 42;
                        functionCall();
                    }
                    break;
                case 3:
                    EnterOuterAlt(_localctx, 3);
                    {
                        State = 44;
                        type();
                        State = 45;
                        Match(ID);
                        State = 46;
                        Match(T__0);
                        State = 50;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                        while (_la == PARAM_TYPE)
                        {
                            {
                                {
                                    State = 47;
                                    declareparam();
                                }
                            }
                            State = 52;
                            ErrorHandler.Sync(this);
                            _la = TokenStream.LA(1);
                        }
                    }
                    break;
                case 4:
                    EnterOuterAlt(_localctx, 4);
                    {
                        State = 53;
                        type();
                        State = 54;
                        Match(ID);
                        State = 55;
                        Match(T__0);
                        State = 56;
                        tr31Header();
                    }
                    break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class DeclareparamContext : ParserRuleContext
    {
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PARAM_TYPE() { return GetToken(CryptoScriptParser.PARAM_TYPE, 0); }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MECHANISM() { return GetToken(CryptoScriptParser.MECHANISM, 0); }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PADDING() { return GetToken(CryptoScriptParser.PADDING, 0); }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HEX_STRING() { return GetToken(CryptoScriptParser.HEX_STRING, 0); }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BASE64_STRING() { return GetToken(CryptoScriptParser.BASE64_STRING, 0); }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(CryptoScriptParser.ID, 0); }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIANT_VALUE() { return GetToken(CryptoScriptParser.VARIANT_VALUE, 0); }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NORMAL_STRING() { return GetToken(CryptoScriptParser.NORMAL_STRING, 0); }
        [System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(CryptoScriptParser.INT, 0); }
        public DeclareparamContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_declareparam; } }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void EnterRule(IParseTreeListener listener)
        {
            ICryptoScriptListener typedListener = listener as ICryptoScriptListener;
            if (typedListener != null) typedListener.EnterDeclareparam(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override void ExitRule(IParseTreeListener listener)
        {
            ICryptoScriptListener typedListener = listener as ICryptoScriptListener;
            if (typedListener != null) typedListener.ExitDeclareparam(this);
        }
        [System.Diagnostics.DebuggerNonUserCode]
        public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
        {
            ICryptoScriptVisitor<TResult> typedVisitor = visitor as ICryptoScriptVisitor<TResult>;
            if (typedVisitor != null) return typedVisitor.VisitDeclareparam(this);
            else return visitor.VisitChildren(this);
        }
    }

    [RuleVersion(0)]
    public DeclareparamContext declareparam()
    {
        DeclareparamContext _localctx = new DeclareparamContext(Context, State);
        EnterRule(_localctx, 6, RULE_declareparam);
        try
        {
            State = 84;
            ErrorHandler.Sync(this);
            switch (Interpreter.AdaptivePredict(TokenStream, 4, Context))
            {
                case 1:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 60;
                        Match(PARAM_TYPE);
                        State = 61;
                        Match(T__1);
                        State = 62;
                        Match(MECHANISM);
                    }
                    break;
                case 2:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 63;
                        Match(PARAM_TYPE);
                        State = 64;
                        Match(T__1);
                        State = 65;
                        Match(PADDING);
                    }
                    break;
                case 3:
                    EnterOuterAlt(_localctx, 3);
                    {
                        State = 66;
                        Match(PARAM_TYPE);
                        State = 67;
                        Match(T__1);
                        State = 68;
                        Match(HEX_STRING);
                    }
                    break;
                case 4:
                    EnterOuterAlt(_localctx, 4);
                    {
                        State = 69;
                        Match(PARAM_TYPE);
                        State = 70;
                        Match(T__1);
                        State = 71;
                        Match(BASE64_STRING);
                    }
                    break;
                case 5:
                    EnterOuterAlt(_localctx, 5);
                    {
                        State = 72;
                        Match(PARAM_TYPE);
                        State = 73;
                        Match(T__1);
                        State = 74;
                        Match(ID);
                    }
                    break;
                case 6:
                    EnterOuterAlt(_localctx, 6);
                    {
                        State = 75;
                        Match(PARAM_TYPE);
                        State = 76;
                        Match(T__1);
                        State = 77;
                        Match(VARIANT_VALUE);
                    }
                    break;
                case 7:
                    EnterOuterAlt(_localctx, 7);
                    {
                        State = 78;
                        Match(PARAM_TYPE);
                        State = 79;
                        Match(T__1);
                        State = 80;
                        Match(NORMAL_STRING);
                    }
                    break;
                case 8:
                    EnterOuterAlt(_localctx, 8);
                    {
                        State = 81;
                        Match(PARAM_TYPE);
                        State = 82;
                        Match(T__1);
                        State = 83;
                        Match(INT);
                    }
                    break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }
